# ntsc

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.nut  test.yml
data/: frei0r_ntscrs.xml
presets/: Low-Power-NTSC.json  frei0r_ntscrs.xml
src/: lib.rs
xtask/src/: main.rs
